--- a/app/src/main/res/layout/activity_create_film.xml
+++ b/app/src/main/res/layout/activity_create_film.xml
@@ -131,4 +131,13 @@
         app:layout_constraintTop_toTopOf="@+id/burFilmCreate"
         app:layout_constraintVertical_bias="0.0" />
 
+    <CheckBox
+        android:id="@+id/isInCartelera"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Esta en cartelera"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/urlImgFilmCreate" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
