--- a/app/src/main/res/layout/activity_ventas.xml
+++ b/app/src/main/res/layout/activity_ventas.xml
@@ -6,23 +6,31 @@
     android:layout_height="match_parent"
     tools:context=".VentasActivity">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/ventaRecicler"
-        android:layout_width="409dp"
-        android:layout_height="729dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginEnd="1dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/ventaRecicler"
+                android:layout_width="409dp"
+                android:layout_height="729dp"
+                android:layout_marginStart="1dp"
+                android:layout_marginTop="1dp"
+                android:layout_marginEnd="1dp" />
+        </LinearLayout>
+    </ScrollView>
 
     <Button
         android:id="@+id/volverButVentas"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="60dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginEnd="64dp"
+        android:layout_marginBottom="80dp"
         android:text="Volver"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
